completed signin signout

--- a/src/app/main/home/carousel/carousel.component.html
+++ b/src/app/main/home/carousel/carousel.component.html
@@ -1,5 +1,4 @@
 <section>
-  <h1>Thumbs</h1>
   <swiper
     [slidesPerView]="1"
     [spaceBetween]="50"
@@ -14,6 +13,7 @@
           class="item"
           [style]="{ 'background-image': 'url(' + item.poster + ')' }"
         >
+          <div class="backgroundLinear"></div>
           <img
             src="../../../../assets/img/carousel/play-video.png"
             alt="play"
