--- a/src/app/main/home/carousel/carousel.component.scss
+++ b/src/app/main/home/carousel/carousel.component.scss
@@ -4,16 +4,38 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
-  display: flex;
+  // display: flex;
+  position: relative;
   &:hover img{
     opacity: 1;
   }
   img {
     transition: opacity .2s;
     opacity: 0;
-    margin: auto;
+    // margin: auto;
+    position: absolute;
     height: 80px;
     weight: 80px;
+    left: 50%;
+    top: 50%;
+		margin-left: -40px;
+		margin-top: -40px;
     cursor: pointer;
+    
+  }
+  .backgroundLinear {
+    position: absolute;
+    // width: 100%;
+    // height: 100%;
+    background: 0 0;
+    background: linear-gradient(to top,#59215e,transparent 20%), linear-gradient(to bottom,#59215e,transparent 20%);
+    // top: 0;
+
+    top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		margin: auto;
   }
 }
+
