--- a/src/app/main/main-layout/main-layout.component.scss
+++ b/src/app/main/main-layout/main-layout.component.scss
@@ -1,187 +1,304 @@
+// header
+header {
+  display: flex;
+  height: 180px;
+  align-items: center;
+  align-items: flex-end;
+  .logo {
+    flex: 0 0 100px;
+    align-self: center;
+    img {
+      width: 100px;
+    }
+  }
+  .main-nav {
+    flex-basis: calc(100% - 100px);
+    display: flex;
+    flex-direction: column;
+    .top-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      .dat-ve-ngay {
+        width: 200px;
+        height: auto;
+      }
+      .auth {
+        width: 400px;
+        .vn {
+          width: 36px;
+          height: 36px;
+          border-radius: 50%;
+          margin-right: 20px;
+        }
+        .user {
+          border-radius: 50%;
+          width: 40px;
+        }
+        .bong-ngo {
+          width: 41px;
+        }
+        .so-da {
+          width: 50px;
+        }
+        button {
+          min-height: 50px;
+          width: 151px;
+          font-weight: 500;
+          border-radius: 50px 20px;
+          border: none;
+        }
+        .dangky {
+          background-color: #b3b3b3;
+        }
+        .dangnhap {
+          background-color: #ea3b92;
+          color: #e8e6e3;
+        }
+      }
+      padding-bottom: 5px;
+      border-bottom: 2px solid #ff009e;
+    }
+  }
+}
+.bottom-nav {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0px;
+  height: 70px;
+  li {
+    padding: 11px;
+    font-size: 15px;
+    color: #e8e6e3;
+    border-radius: 50px 20px;
+    cursor: pointer;
+    &:hover {
+      background-color: #ea3b92;
+    }
+  }
+}
+.spacer {
+  background-size: 100%;
+  background-repeat: repeat-y;
+}
+.pink-bg {
+  background-color: #ea3b92;
+}
 
-
+.header-fixed {
+  position: fixed;
+  top: -54px;
+  left: 0;
+  width: 100%;
+  height: 54px;
+  background-color: #191025;
+  z-index: 100;
+  overflow: hidden;
+  border-bottom: 1px solid #ea3b92;
+  padding-left: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s;
+  .logo {
+    position: absolute;
+    top: 3px;
+    left: 39px;
+  }
+  ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+    li {
+      padding: 11px;
+    }
+  }
+}
+.scroll-down {
+  top: 0px;
+}
 
 // footer
 footer {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   background-color: #222222;
   z-index: 3;
   overflow: hidden !important;
   .wrapper-footer {
-      // max-width: 940px;
-      margin: auto;
-      padding-top: 20px;
-      padding-bottom: 20px;
+    // max-width: 940px;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #949494;
+    position: relative;
+
+    .title {
+      color: #fff;
+      font-size: 12px;
+    }
+
+    .row {
+      margin-left: 0;
+    }
+
+    .info1 {
+      padding-left: 0;
+    }
+
+    a {
+      text-decoration: none;
+      font-size: 13px;
       color: #949494;
-      position: relative;
+      white-space: nowrap;
+      font-weight: 700;
+      transition: all 0.3s;
+
+      &:hover {
+        color: white;
+      }
+    }
+
+    .lineBottom {
+      margin-bottom: 15px;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .iconConnect {
+      border-radius: 50%;
+      height: 30px;
+      width: 30px;
+      margin-right: 15px;
+    }
+
+    .iconApp {
+      background: 0 0;
+      height: 30px;
+      width: auto;
+      margin: 5px;
+    }
+
+    .textCenter {
+      text-align: center;
+    }
+
+    .hrFooter {
+      border-top: 1px solid #4a4a4a;
+    }
+
+    .imgFooter {
+      text-align: center;
+      padding: 0;
+      .zion {
+        border-radius: 8px;
+        width: 80px;
+        height: auto;
+      }
+      .congThuong {
+        width: 130px;
+      }
+    }
+
+    .infoFooter {
+      span {
+        display: block;
+        line-height: 1.8;
+        color: #949494;
+        font-size: 12px;
+        font-weight: 400;
+      }
 
       .title {
-          color: #fff;
-          font-size: 12px;
+        color: #fff;
+        font-size: 16px;
       }
-
-      .row {
-          margin-left: 0;
-      }
-
-      .info1 {
-          padding-left: 0;
-      }
-
+    }
+    .four {
+      display: none;
+      text-align: center;
       a {
-          text-decoration: none;
-          font-size: 13px;
-          color: #949494;;
-          white-space: nowrap;
-          font-weight: 700;
-          transition: all 0.3s;
+        text-decoration: none;
+        font-size: 13px;
+        color: #949494;
+        white-space: nowrap;
+        font-weight: 700;
+        transition: all 0.3s;
+        cursor: pointer;
 
-          &:hover {
-              color: white;
-          }
+        &:hover {
+          color: white;
+        }
       }
-
-      .lineBottom {
-          margin-bottom: 15px;
-          padding-left: 0;
-          padding-right: 0;
-      }
-      
-      .iconConnect {
-          border-radius: 50%;
-          height: 30px;
-          width: 30px;
-          margin-right: 15px;
-      }
-
-      .iconApp {
-          background: 0 0;
-          height: 30px;
-          width: auto;
-          margin: 5px;
-      }
-
-      .textCenter {
-          text-align: center;
-      }
-
-      .hrFooter {
-          border-top: 1px solid #4a4a4a;
-      }
-
-      .imgFooter {
-          text-align: center;
-          padding: 0;
-          .zion {
-              border-radius: 8px;
-              width: 80px;
-              height: auto;
-          }
-          .congThuong {
-              width: 130px;
-          }
-      }
-
-      .infoFooter {
-          span {
-              display: block;
-              line-height: 1.8;
-              color: #949494;
-              font-size: 12px;
-              font-weight: 400;
-          }
-
-          .title {
-              color: #fff;
-              font-size: 16px;
-          }
-      }
-      .four {
-          display: none;
-          text-align: center;
-          a {
-              text-decoration: none;
-              font-size: 13px;
-              color: #949494;;
-              white-space: nowrap;
-              font-weight: 700;
-              transition: all 0.3s;
-              cursor: pointer;
-
-              &:hover {
-                  color: white;
-              }
-          }
-          
-      }
+    }
   }
 }
 
-
 @media only screen and (max-width: 992px) {
   footer {
-      
-      .second {
-          display: none;
-      }
+    .second {
+      display: none;
+    }
   }
 }
 
 @media only screen and (min-width: 768px) {
   footer {
-      .four {
-          display: none;
-      }
+    .four {
+      display: none;
+    }
   }
 }
 
 @media only screen and (max-width: 768px) {
   footer {
-      .second, .first, .third {
-          display: none;
-      }
-      .four {
-          display: block !important;
-          
-      }
-      .infoFooter{
-          text-align: center;
+    .second,
+    .first,
+    .third {
+      display: none;
+    }
+    .four {
+      display: block !important;
+    }
+    .infoFooter {
+      text-align: center;
 
-          .zion {
-              margin-bottom: 15px;
-          }
-
-          .congThuong {
-              margin-top: 15px;
-              float: none !important;
-          }
-
-          .infoFooter {
-              .title {
-                  font-size: 14px;
-              }
-          }
+      .zion {
+        margin-bottom: 15px;
       }
+
+      .congThuong {
+        margin-top: 15px;
+        float: none !important;
+      }
+
+      .infoFooter {
+        .title {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 576px) {
   footer {
-      .four {
-          a {
-              font-size: 12px !important;
-          }
-          img {
-              width: 25px !important;
-              height: 25px !important;
-          }
+    .four {
+      a {
+        font-size: 12px !important;
       }
+      img {
+        width: 25px !important;
+        height: 25px !important;
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 687px) {
   footer {
-      padding-bottom: 50px !important;    
+    padding-bottom: 50px !important;
   }
 }
-
