--- a/src/app/main/signin/signin.component.html
+++ b/src/app/main/signin/signin.component.html
@@ -1,1 +1,56 @@
-<p>signin works!</p>
+<div class="form container">
+  <div class="title">
+    <h2>Đăng nhập</h2>
+  </div>
+  <h2 class="text-center text-danger my-3" *ngIf="signinError">
+    {{ signinError }}
+  </h2>
+  <form
+    [formGroup]="signinForm"
+    class="text-center"
+    (ngSubmit)="handleSignin()"
+  >
+    <mat-form-field appearance="fill" class="field">
+      <mat-label>Tên đăng nhập</mat-label>
+      <input matInput formControlName="taiKhoan" />
+      <mat-error *ngIf="signinForm.get('taiKhoan')?.invalid">
+        <span *ngIf="signinForm.get('taiKhoan')?.errors?.required">
+          Tài khoản không được để trống
+        </span>
+        <span
+          *ngIf="
+            signinForm.get('taiKhoan')?.errors?.minlength ||
+            signinForm.get('taiKhoan')?.errors?.maxlength
+          "
+        >
+          Tài khoản phải từ 3 đến 20 kí tự
+        </span>
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="field">
+      <mat-label>Enter your password</mat-label>
+      <input
+        matInput
+        formControlName="matKhau"
+        [type]="hide ? 'password' : 'text'"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="hide = !hide"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide"
+      >
+        <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+      </button>
+      <mat-error *ngIf="signinForm.get('matKhau')?.invalid">
+        <span *ngIf="signinForm.get('matKhau')?.errors?.required">
+          Mật khẩu không được để trống
+        </span>
+      </mat-error>
+    </mat-form-field>
+    <button [disabled]="signinForm.invalid" class="btnpink btn mb-3">
+      Đăng nhập
+    </button>
+  </form>
+</div>
