--- a/src/app/main/home/carousel/carousel.component.scss
+++ b/src/app/main/home/carousel/carousel.component.scss
@@ -1,41 +1,34 @@
-.item{
+.item {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
-  // display: flex;
   position: relative;
-  &:hover img{
+  &:hover img {
     opacity: 1;
   }
   img {
-    transition: opacity .2s;
+    transition: opacity 0.2s;
     opacity: 0;
-    // margin: auto;
     position: absolute;
     height: 80px;
-    weight: 80px;
+    width: 80px;
     left: 50%;
     top: 50%;
-		margin-left: -40px;
-		margin-top: -40px;
+    margin-left: -40px;
+    margin-top: -40px;
     cursor: pointer;
-    
   }
   .backgroundLinear {
     position: absolute;
-    // width: 100%;
-    // height: 100%;
     background: 0 0;
-    background: linear-gradient(to top,#59215e,transparent 20%), linear-gradient(to bottom,#59215e,transparent 20%);
-    // top: 0;
-
+    background: linear-gradient(to top, #59215e, transparent 20%),
+      linear-gradient(to bottom, #59215e, transparent 20%);
     top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		margin: auto;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
   }
 }
-
