--- a/src/app/main/home/carousel/carousel.component.html
+++ b/src/app/main/home/carousel/carousel.component.html
@@ -6,6 +6,7 @@
     [pagination]="{ clickable: true }"
     [thumbs]="{ swiper: thumbsSwiper }"
     [loop]="true"
+    [autoplay]="true"
   >
     <ng-container *ngFor="let item of dataCarousel">
       <ng-template swiperSlide>
