--- a/src/app/main/home/movie-list/movie-list.component.html
+++ b/src/app/main/home/movie-list/movie-list.component.html
@@ -1,20 +1,43 @@
-<mat-grid-list cols="4">
-  <mat-grid-tile *ngFor="let movie of movieList">
-    <mat-card class="example-card">
-      <img mat-card-image height="300px" [src]="movie.hinhAnh" />
-      <mat-card-content>
-        <p>{{ movie.tenPhim }}</p>
-        <p>{{ movie.moTa }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button
-          mat-raised-button
-          color="primary"
-          routerLink="/movie/{{ movie.maPhim }}"
-        >
-          Chi tiết
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-</mat-grid-list>
+<section class="container movie-list">
+  <div class="tab my-4">
+    <div
+      class="nowshowing"
+      [ngClass]="{ active: show }"
+      (click)="activeNowShowing()"
+    >
+      <div class="button">
+        <img src="assets/img/home/icon-ticket.png" alt="" />
+        <span class="title">phim đang chiếu</span>
+      </div>
+      <span class="border"></span>
+    </div>
+    <div
+      class="comingsoon"
+      [ngClass]="{ active: !show }"
+      (click)="activeComingsoon()"
+    >
+      <div class="button">
+        <span class="title">phim sắp chiếu</span>
+        <img src="assets/img/home/icon-sap-chieu.png" alt="" />
+      </div>
+      <span class="border"></span>
+    </div>
+  </div>
+
+  <swiper
+    [slidesPerView]="4"
+    [spaceBetween]="50"
+    [navigation]="true"
+    [effect]="'coverflow'"
+    [grabCursor]="true"
+    [centeredSlides]="true"
+    [initialSlide]="5"
+  >
+    [centeredSlidesBounds]="true"
+    <ng-container *ngFor="let movie of show ? comingsoonList : nowshowingList">
+      <ng-template swiperSlide>
+        <app-movie [movie]="movie"></app-movie>
+      </ng-template>
+    </ng-container>
+  </swiper>
+</section>
