--- a/src/styles/Components/_styles.scss
+++ b/src/styles/Components/_styles.scss
@@ -34,7 +34,15 @@
   color: #f29438;
   font-size: 18px;
   font-weight: 700;
-  border-bottom: 1px solid #f29438;
+  border-bottom: 2px solid #f29438;
+  padding-left: 10px;
+  line-height: 35px;
+}
+.titleWhite {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  border-bottom: 2px solid #fff;
   padding-left: 10px;
   line-height: 35px;
 }
