--- a/src/app/components/movie/movie.component.scss
+++ b/src/app/components/movie/movie.component.scss
@@ -89,7 +89,7 @@
     }
     .start-time {
       font-size: 14px;
-      color: #fff;
+      color: #ea3b92;
       font-weight: 500;
       text-align: center;
     }
